fix toolbar visibility

--- a/src/components/ProjectList/ProjectList.scss
+++ b/src/components/ProjectList/ProjectList.scss
@@ -299,6 +299,11 @@ a {
   cursor: pointer;
   margin: 18px 10px;
 
+  &:hover .tooltip {
+    opacity: 1;
+    visibility: visible;
+  }
+
   &:before {
     content: "";
     position: absolute;
